2008-11-22 17:29 +0100  Rocco Rutte  <pdmef@gmx.net>  (fc9791c80c9e)

	* UPDATING, functions.h, keymap.c, pager.c: Make what-key function
	available in pager-based menus, too

2008-11-21 11:34 -0800  Petr Písař  <petr.pisar@atlas.cz>  (870b7dfb89ef)

	* po/cs.po: Updated Czech translation.

2008-11-21 11:19 -0800  TAKAHASHI Tamotsu  <ttakah@lapis.plala.or.jp>  (34315aab7401)

	* ChangeLog, mbyte.c: Initialize mbstate in mutt_filter_unprintable.
	Closes #3134

2008-11-16 21:01 -0800  TAKAHASHI Tamotsu  <ttakah@lapis.plala.or.jp>  (8199185fa595)

	* snprintf.c: Add support for %ll to the bundled snprintf
	replacement.

	* configure.ac, doc/makedoc-defs.h: Add --disable-full-doc flag to
	only build documentation for enabled features

2008-11-15 20:24 -0800  Brendan Cully  <brendan@kublai.com>  (8087be7178cd)

	* configure.ac: Use with_tokyocabinet exclusively (with_tc is
	undefined). Closes #3131.

2008-11-15 19:51 -0800  Alexey I. Froloff  <raorn@altlinux.org>  (af87aa1846be)

	* md5.c, md5.h: md5.h, md5.c: updated to latest version from gnulib.
	Buggy old md5.h causes problems with gcc 4.3 compiler. In md5.h
	__attribute__ is #define'd to no-op and causes mutt_md5 to enter
	inifinite loop while calling memcpy().

2008-11-15 19:36 -0800  Gary Johnson  <garyjohn@spk.agilent.com>  (01e4deee6827)

	* curs_lib.c, mutt_socket.c, mutt_ssl_gnutls.c, smtp.c: Suppress
	several progress messages in batch mode

2008-11-11 11:41 -0800  Kyle Wheeler  <kyle-mutt-dev@memoryhole.net>  (53ffd34f4de3)

	* smtp.c: Use envfrom instead of recomputing it in mutt_smtp_send.

2008-10-29 20:49 -0700  TAKAHASHI Tamotsu  <ttakah@lapis.plala.or.jp>  (c2439fc68cd6)

	* pager.c: Restart pager search from top if called twice.  Do not
	loop infinitely. Closes #3127.

2008-10-30 01:02 +0100  Emanuele Giaquinta  <e.giaquinta@glauco.it>  (6c58b678d360)

	* account.c: Remove unused variable in mutt_account_match and fix
	comment.

	* imap/command.c, imap/imap.h, imap/util.c: Add imap_account_match